# project1_panshina_tatiana_m25-555

./: Makefile  README.md  pyproject.toml  test2
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
myenv/: pyvenv.cfg
