[tool.poetry]
name = "project1-panshina-tatiana-m25-555"
version = "0.1.0"
description = "Текстовая игра, в которой игрок исследует лабиринт, собирает предметы и пытается найти сундук с сокровищами, преодолевая преграды и головоломки на пути."
authors = ["Tatiana Panshina <mmitataa@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "labyrinth_game" },
    ]
[tool.poetry.dependencies]
python = "^3.12"
[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
